@@ -1,4 +1,4 @@
 @set UPDATED 25 September 2002
 @set UPDATED-MONTH September 2002
-@set EDITION 1.7.1
-@set VERSION 1.7.1
+@set EDITION 1.7.1a
+@set VERSION 1.7.1a
