@@ -1,5 +1,7 @@
 2002-10-16  Alexandre Duret-Lutz  <adl@gnu.org>
 
+	* configure.in: Bump version to 1.7.1a.
+
 	* NEWS, configure.in: Version 1.7.1.
 
 	* automake.in (handle_single_transform_list): Strip directory name
